--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,10 +80,14 @@ main > .section {
   margin: 0 auto;
   max-width: var(--content-max-width);
   padding: 32px 20px;
+  scroll-margin-top: 140px;
 }
 
 main > .section:first-of-type {
-  padding: 0;
+  padding-left: 0;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-top: 32px;
   margin-top: 0;
   max-width: unset;
 }
